--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,15 @@
 
 <ion-content>
   <!-- el componente para ingrear un nuevo TODO aqui -->
-
+  <div>
+    <ion-item>
+      <ion-label floating>nuevoquehacer</ion-label>
+      <ion-input type="text" #quehacerinput></ion-input>
+    </ion-item>
+  </div>
+<div padding>
+<button ion-button block (click)="agregarQuehacer(quehacerinput.value,false)">agregar</button>
+</div>
   <!-- la lista de TODOs aqui -->
   <div>
     <ion-list>
